Modified the "main2" tag so it handles the alignment issue in the browse rides page

--- a/roadmate/stylesheets/higher_ground.css
+++ b/roadmate/stylesheets/higher_ground.css
@@ -203,11 +203,12 @@ tr.list-heading {
 
 /* message list headings for the different authors*/
 tr.message-owner {
-<<<<<<< .mine
 	background: #c3c3c3;
-=======
+
+	background: #c3c3c3;
+
 	background: #b4d151;
->>>>>>> .r366
+
 }
 tr.message-passenger {
 	background: #c1c1c1;
@@ -504,7 +505,7 @@ select#id_destination {
 
 /* Main Column */
 #main2 {
-	padding: 20px 20px 20px 10px;; margin: 0 0 0 10px;
+	padding: 20px 20px 20px 10px; margin: 40px 0 0 10px;
 }
 #main2 h2 {
 	font: normal 1.9em 'Trebuchet MS', Tahoma, Sans-serif;
